# python-project-lvl1

./: .gitignore  .travis.yml  Makefile  README.md  poetry  pyproject.toml
brain_games/: cli.py  flow.py  game1.py
brain_games/games/: calc.py  even.py  flow.py  game1.py  game1_even.py  game2_calc.py  game3_gcd.py  game4_progression.py  game5_prime.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
